Extend the response family for RandomResourcesFuzzer